EXTRA_DIST = glibc2.m4 intl.m4 intldir.m4 lock.m4 visibility.m4 \
absolute-header.m4 \
libunistring.m4 \
codeset.m4 \
freetype2.m4\
gettext.m4\
glib-2.0.m4\
glibc21.m4\
glib-gettext.m4\
gnulib-cache.m4\
gtk-2.0.m4\
iconv.m4\
intdiv0.m4\
intmax.m4\
inttypes_h.m4\
inttypes.m4\
inttypes-pri.m4\
isc-posix.m4\
lcmessage.m4\
libgcrypt.m4\
lib-ld.m4\
lib-link.m4\
lib-prefix.m4\
libxml2.m4\
longdouble.m4\
longlong.m4\
nls.m4\
pkg.m4\
po.m4\
printf-posix.m4\
progtest.m4\
signed.m4\
size_max.m4\
stdint_h.m4\
uintmax_t.m4\
ulonglong.m4\
wchar_t.m4\
wint_t.m4\
xsize.m4
