set (SUBDIRS
	abe
	arm
	ats
	ats-tests
	ats-tool
	auction
	block
	cadet
	consensus
	conversation
	core
	credential
	curl
	datacache
	datastore
	dht
	dns
	exit
	fragmentation
	fs
	gns
	gnsrecord
	hello
	hostlist
	identity
	include
	integration-tests
	json
	multicast
	my
	mysql
	namecache
	namestore
	nat
	nat-auto
	nse
	nt
	peerinfo
	peerinfo-tool
	peerstore
	pq
	psyc
	psycstore
	psycutil
	pt
	reclaim
	reclaim-attribute
	regex
	rest
	rest-plugins
	revocation
	rps
	scalarproduct
	secretsharing
	set
	social
	sq
	statistics
	template
	testbed
	testbed-logger
	testing
	topology
	transport
	util
	vpn
	zonemaster
	)

FOREACH(DIR ${SUBDIRS})
	add_subdirectory(DIR)
ENDFOREACH()
